--- a/eureka-consumer/src/main/resources/application.properties
+++ b/eureka-consumer/src/main/resources/application.properties
@@ -7,3 +7,12 @@ eureka.client.service-url.defaultZone=http://localhost:8001/eureka
 spring.application.name=consumer
 eureka.instance.instance-id=consumer1
 
+# 配置请求GZIP压缩
+feign.compression.request.enabled=true
+# 配置响应GZIP压缩
+feign.compression.response.enabled=true
+# 配置压缩支持的mime type
+feign.compression.request.mime-types="text/xml", "application/xml", "application/json"
+# 配置压缩数据大小的下限,默认2048
+feign.compression.request.min-request-size=2048
+
