--- a/eureka-consumer/src/main/resources/application.properties
+++ b/eureka-consumer/src/main/resources/application.properties
@@ -5,7 +5,7 @@ eureka.client.register-with-eureka=true
 # 和eureka服务器通讯的URL
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka
 spring.application.name=consumer
-eureka.instance.instance-id=consumer1
+eureka.instance.instance-id=consumer
 
 # 配置请求GZIP压缩
 feign.compression.request.enabled=true
@@ -16,3 +16,4 @@ feign.compression.request.mime-types="text/xml", "application/xml", "application
 # 配置压缩数据大小的下限,默认2048
 feign.compression.request.min-request-size=2048
 
+feign.hystrix.enabled=true
