--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8001
-spring.application.name=eureka1
+spring.application.name=eureka
 # 实例名称 名字可以自己定
-eureka.instance.hostname=eureka1
+eureka.instance.hostname=eureka
 
 # eureka client 信息是否被其他eureka client 发现它的信息
 eureka.client.register-with-eureka=false
