--- a/eureka-provider/src/main/resources/application.properties
+++ b/eureka-provider/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=9003
 # 生产者应用名称 -
 spring.application.name=PROVIDER
 # 生产者实例名，同一个spring.application.name 名称唯一
-eureka.instance.instance-id=provider3
+eureka.instance.instance-id=provider
 
 eureka.client.register-with-eureka=true
 # 和eureka服务器通讯的URL
