--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,75 @@
     <groupId>site.sunlong</groupId>
     <artifactId>base</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>base</name>
+    <name>micro-services-practice</name>
     <description>micro-services-practice</description>
     <properties>
-        <java.version>1.8</java.version>
+        <jdk.version>1.8</jdk.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
     </properties>
 
+    <modules>
+        <module>eureka-server</module>
+        <module>eureka-consumer</module>
+        <module>eureka-provider</module>
+        <module>hystrix-dashboard</module>
+        <module>ribbon</module>
+    </modules>
+
+    <dependencyManagement>
+        <dependencies>
+
+            <dependency> <!-- 进行SpringCloud依赖包的导入处理 -->
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Greenwich.SR1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency> <!-- SpringCloud离不开SpringBoot，所以必须要配置此依赖包 -->
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>2.1.6.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+
+
+            <dependency>
+                <groupId>site.sunlong</groupId>
+                <artifactId>eureka-server</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>site.sunlong</groupId>
+                <artifactId>eureka-provider</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>site.sunlong</groupId>
+                <artifactId>eureka-consumer</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>site.sunlong</groupId>
+                <artifactId>hystrix-dashboard</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>site.sunlong</groupId>
+                <artifactId>ribbon</artifactId>
+            </dependency>
+
+        </dependencies>
+
+
+    </dependencyManagement>
 
 
 
