hystrix dashboard turbine

--- a/eureka-consumer/src/main/resources/application.properties
+++ b/eureka-consumer/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=7001
 eureka.client.register-with-eureka=true
 # 和eureka服务器通讯的URL
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka
-spring.application.name=consumer
+spring.application.name=CONSUMER
 eureka.instance.instance-id=consumer
 
 # 配置请求GZIP压缩
@@ -17,3 +17,6 @@ feign.compression.request.mime-types="text/xml", "application/xml", "application
 feign.compression.request.min-request-size=2048
 
 feign.hystrix.enabled=true
+
+# actuator 监控
+management.endpoints.web.exposure.include=*
