--- a/eureka-provider/src/main/resources/application.properties
+++ b/eureka-provider/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9001
 # 生产者应用名称 -
-spring.application.name=provider
+spring.application.name=PROVIDER
 # 生产者实例名，同一个spring.application.name 名称唯一
 eureka.instance.instance-id=provider
 
@@ -13,5 +13,5 @@ eureka.instance.lease-renewal-interval-in-seconds=5
 # eureka server 最后一次收到心跳时等待的时间，超时将会移除client（默认是90秒）
 eureka.instance.lease-expiration-duration-in-seconds=3
 
-#
+# actuator 监控
 management.endpoints.web.exposure.include=*
