--- a/hystrix-dashboard/src/main/resources/application.properties
+++ b/hystrix-dashboard/src/main/resources/application.properties
@@ -1,18 +1,8 @@
 server.port=10001
 
 # 实例名称 名字可以自己定
-spring.application.name=hystrix-turbine
-# 实例名，同一个spring.application.name 名称唯一
-eureka.instance.instance-id=hystrix-turbine
+spring.application.name=hystrix-dashboard
 
-# 此客户端是否应该从eureka server 获取eureka注册信息
-eureka.client.register-with-eureka=true
-
-# 和eureka服务器通讯的URL
-eureka.client.service-url.defaultZone=http://localhost:8001/eureka
-
-turbine.app-config=provider
-turbine.cluster-name-expression="'default'"
 
 
 
