--- a/zuul-gateway/pom.xml
+++ b/zuul-gateway/pom.xml
@@ -9,24 +9,32 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <artifactId>hystrix-dashbord-turbine</artifactId>
+    <artifactId>zuul-gateway</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>hystrix-dashbord-turbine</name>
-    <description>hystrix-dashbord-turbine</description>
+    <name>zuul-gateway</name>
+    <description>zuul</description>
     <properties>
         <java.version>1.8</java.version>
+
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-turbine</artifactId>
+            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
         </dependency>
+
+
     </dependencies>
+
 
     <build>
         <plugins>
@@ -36,5 +44,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
