eureka.instance.prefer-ip-address

--- a/zuul-gateway/src/main/resources/application.properties
+++ b/zuul-gateway/src/main/resources/application.properties
@@ -7,3 +7,4 @@ eureka.client.register-with-eureka=false
 
 # 和eureka服务器通讯的URL
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka
+eureka.instance.prefer-ip-address=true
