--- a/zuul-gateway/src/main/resources/application.properties
+++ b/zuul-gateway/src/main/resources/application.properties
@@ -1,10 +1,41 @@
 server.port=8501
 
-spring.application.name=zuul-gateway
+spring.application.name=ZUUL-GATEWAY
 
 # 此客户端是否应该从eureka server 获取eureka注册信息
-eureka.client.register-with-eureka=false
+eureka.client.register-with-eureka=true
 
 # 和eureka服务器通讯的URL
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka
 eureka.instance.prefer-ip-address=true
+
+# 设置心跳的时间间隔（默认是30秒）
+eureka.instance.lease-renewal-interval-in-seconds=5
+# eureka server 最后一次收到心跳时等待的时间，超时将会移除client（默认是90秒）
+eureka.instance.lease-expiration-duration-in-seconds=3
+
+# 自定义路由访问规则
+zuul.routes.providers=/providers-proxy/**
+zuul.routes.user-providers=/user-providers-proxy/**
+
+# 忽略集群名，屏蔽服务原有的对外访问的路由前缀，比如屏蔽了providers服务就不能以providers做为前缀访问providers服务
+#zuul.ignored-services=providers
+# *是屏蔽所有的服务，防止服务侵入
+zuul.ignored-services=*
+# 接口路径屏蔽
+zuul.ignored-patterns=/**/hello/**
+
+# 设置公共前缀
+zuul.prefix=/zuul-proxy
+
+# providers 是一个逻辑名称，是为了和serviceId关联起来的，path前的providers可以不是服务名，只要service-id和path前对应就行
+#zuul.routes.providers.path=/providers-proxy/**
+#zuul.routes.providers.service-id=providers
+
+#单实例映射,不要service-id，使用url填写物理路由
+#zuul.routes.providers.path=/providers-proxy/**
+#zuul.routes.providers.url=http://localhost:9001
+
+# 开启重试
+#zuul.retryable=true
+
