--- a/eureka-consumer/src/main/resources/application.properties
+++ b/eureka-consumer/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=7001
 eureka.client.register-with-eureka=true
 # 和eureka服务器通讯的URL
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka
-spring.application.name=CONSUMER
+spring.application.name=CONSUMERS
 eureka.instance.instance-id=consumer
 
 # 配置请求GZIP压缩
