--- a/user-provider/src/main/resources/application.properties
+++ b/user-provider/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9101
 # 生产者应用名称 -
-spring.application.name=USER-PROVIDER
+spring.application.name=USER-PROVIDERS
 # 生产者实例名，同一个spring.application.name 名称唯一
 eureka.instance.instance-id=userProvider
 
