--- a/zuul-gateway/src/main/resources/application.properties
+++ b/zuul-gateway/src/main/resources/application.properties
@@ -15,8 +15,15 @@ eureka.instance.lease-renewal-interval-in-seconds=5
 eureka.instance.lease-expiration-duration-in-seconds=3
 
 # 自定义路由访问规则
-zuul.routes.providers=/providers-proxy/**
-zuul.routes.user-providers=/user-providers-proxy/**
+#zuul.routes.providers=/providers-proxy/**
+#zuul.routes.user-providers=/user-providers-proxy/**
+
+# providers 是一个逻辑名称，是为了和serviceId关联起来的，path前的providers可以不是服务名，只要service-id和path前对应就行
+zuul.routes.providers.path=/providers-proxy/**
+zuul.routes.providers.service-id=providers
+
+zuul.routes.user-providers.path=/user-providers-proxy/**
+zuul.routes.user-providers.service-id=user-providers
 
 # 忽略集群名，屏蔽服务原有的对外访问的路由前缀，比如屏蔽了providers服务就不能以providers做为前缀访问providers服务
 #zuul.ignored-services=providers
@@ -28,9 +35,7 @@ zuul.ignored-patterns=/**/hello/**
 # 设置公共前缀
 zuul.prefix=/zuul-proxy
 
-# providers 是一个逻辑名称，是为了和serviceId关联起来的，path前的providers可以不是服务名，只要service-id和path前对应就行
-#zuul.routes.providers.path=/providers-proxy/**
-#zuul.routes.providers.service-id=providers
+
 
 #单实例映射,不要service-id，使用url填写物理路由
 #zuul.routes.providers.path=/providers-proxy/**
