--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8001
-spring.application.name=eureka
+
+spring.application.name=eureka-server
 # 实例名称 名字可以自己定
 eureka.instance.hostname=eureka
 
