--- a/hystrix-dashboard-turbine/src/main/resources/application.properties
+++ b/hystrix-dashboard-turbine/src/main/resources/application.properties
@@ -10,5 +10,5 @@ eureka.client.register-with-eureka=false
 # 和eureka服务器通讯的URL
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka
 
-turbine.app-config=PROVIDER,USER-PROVIDER
+turbine.app-config=PROVIDERS,USER-PROVIDERS
 turbine.cluster-name-expression=new String("default")
