--- a/cloud-config-server/src/main/resources/application.properties
+++ b/cloud-config-server/src/main/resources/application.properties
@@ -2,8 +2,11 @@ server.port=8101
 
 spring.application.name=cloud-config-server
 
-spring.cloud.config.server.git.uri=https://github.com/ArronSun/micro-services-config.git
+spring.cloud.config.server.git.uri=https://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@github.com/ArronSun/micro-services-config.git
 spring.cloud.config.server.git.username=ArronSun
+#GitHub token
 spring.cloud.config.server.git.password=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
-
+# 仓库路径下相对搜索位置，可以配置多个
 spring.cloud.config.server.git.search-paths=config
+# 连接git 超时时间
+spring.cloud.config.server.git.timeout=30
