--- a/cloud-config-client/src/main/resources/bootstrap.properties
+++ b/cloud-config-client/src/main/resources/bootstrap.properties
@@ -9,3 +9,6 @@ spring.cloud.config.uri=http://localhost:8101
 spring.cloud.config.name=application
 # profile
 spring.cloud.config.profile=dev
+
+# ¿ìËÙÊ§°Ü
+#spring.cloud.config.fail-fast=true
