--- a/cloud-config-client/src/main/resources/application.properties
+++ b/cloud-config-client/src/main/resources/application.properties
@@ -2,4 +2,6 @@ server.port=8201
 
 spring.application.name=cloud-config-client
 
-
+# actuator ¼à¿Ø
+management.endpoints.web.exposure.include=*
+#management.endpoint.health.show-details=always
