--- a/cloud-config-server/src/main/resources/application.properties
+++ b/cloud-config-server/src/main/resources/application.properties
@@ -10,3 +10,14 @@ spring.cloud.config.server.git.password=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
 spring.cloud.config.server.git.search-paths=config
 # 连接git 超时时间
 spring.cloud.config.server.git.timeout=30
+
+
+# actuator 监控
+management.endpoints.web.exposure.include=*
+
+#rabbitmq 配置
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.port=5672
+
