config client bus

--- a/cloud-config-client/src/main/resources/application.properties
+++ b/cloud-config-client/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.application.name=cloud-config-client
 # actuator º‡øÿ
 management.endpoints.web.exposure.include=*
 #management.endpoint.health.show-details=always
+
+#rabbitmq ≈‰÷√
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.port=5672
