config client eureka

--- a/cloud-config-client/src/main/resources/bootstrap.properties
+++ b/cloud-config-client/src/main/resources/bootstrap.properties
@@ -12,3 +12,11 @@ spring.cloud.config.profile=dev
 
 # 快速失败
 #spring.cloud.config.fail-fast=true
+
+# 开启通过服务来访问config server
+spring.cloud.discovery.enabled=true
+# config server 配置中心注册的服务名
+spring.cloud.config.discovery.service-id=CLOUD-CONFIG-SERVER
+
+# 和eureka服务器通讯的URL
+eureka.client.service-url.defaultZone=http://localhost:8001/eureka
