--- a/cloud-config-server/src/main/resources/application.properties
+++ b/cloud-config-server/src/main/resources/application.properties
@@ -21,3 +21,17 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.port=5672
 
+# 生产者实例名，同一个spring.application.name 名称唯一
+eureka.instance.instance-id=cloud-config-server
+
+eureka.client.register-with-eureka=true
+# 和eureka服务器通讯的URL
+eureka.client.service-url.defaultZone=http://localhost:8001/eureka
+# 在地址栏上使用 IP 地址进行显示
+eureka.instance.prefer-ip-address=true
+
+# 设置心跳的时间间隔（默认是30秒）
+eureka.instance.lease-renewal-interval-in-seconds=5
+# eureka server 最后一次收到心跳时等待的时间，超时将会移除client（默认是90秒）
+eureka.instance.lease-expiration-duration-in-seconds=3
+
