--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8001
 
 spring.application.name=eureka-server
 # 实例名称 名字可以自己定
-eureka.instance.hostname=eureka
+eureka.instance.hostname=localhost
 
 # eureka client 信息是否被其他eureka client 发现它的信息
 eureka.client.register-with-eureka=false
