--- a/cloud-stream-provider/src/main/resources/application.properties
+++ b/cloud-stream-provider/src/main/resources/application.properties
@@ -1,34 +1,33 @@
+
 server.port=8301
 spring.application.name=cloud-stream-provider
 
-#消息组件类型 rabbitmq1为自定义的rabbitmq实例名称，如果有多个消息队列实例的话可以参照下面这样
+#娑堟伅缁勪欢绫诲瀷 rabbitmq1涓鸿嚜瀹氫箟鐨剅abbitmq瀹炰緥鍚嶇О锛屽鏋滄湁澶氫釜娑堟伅闃熷垪瀹炰緥鐨勮瘽鍙互鍙傜収涓嬮潰杩欐牱
 spring.cloud.stream.binders.rabbitmq1.type=rabbit
 spring.cloud.stream.binders.rabbitmq1.environment.spring.rabbitmq.host=localhost
 spring.cloud.stream.binders.rabbitmq1.environment.spring.rabbitmq.username=guest
 spring.cloud.stream.binders.rabbitmq1.environment.spring.rabbitmq.password=guest
 spring.cloud.stream.binders.rabbitmq1.environment.spring.rabbitmq.port=5672
 
-# 实例2
+# 瀹炰緥2
 spring.cloud.stream.binders.rabbitmq2.type=rabbit
 spring.cloud.stream.binders.rabbitmq2.environment.spring.rabbitmq.host=localhost
 spring.cloud.stream.binders.rabbitmq2.environment.spring.rabbitmq.username=guest
 spring.cloud.stream.binders.rabbitmq2.environment.spring.rabbitmq.password=guest
 spring.cloud.stream.binders.rabbitmq2.environment.spring.rabbitmq.port=5672
 
-# 要使用的 Exchange 名称
+# 瑕佷娇鐢ㄧ殑 Exchange 鍚嶇О
 spring.cloud.stream.bindings.output.destination=streamExchange
-#设置消息类型
+#璁剧疆娑堟伅绫诲瀷
 spring.cloud.stream.bindings.output.content-type=application/json
-#要绑定的消息服务的实例名
+#瑕佺粦瀹氱殑娑堟伅鏈嶅姟鐨勫疄渚嬪悕
 spring.cloud.stream.bindings.output.binder=rabbitmq1
 
 
 
-#rabbitmq 配置
+#rabbitmq 閰嶇疆
 #spring.rabbitmq.host=localhost
 #spring.rabbitmq.username=guest
 #spring.rabbitmq.password=guest
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.virtual-host=/
-
-
