--- a/cloud-config-client/src/main/resources/bootstrap.properties
+++ b/cloud-config-client/src/main/resources/bootstrap.properties
@@ -1,22 +1,22 @@
-#bootstrap.properties »áÓÅÏÈÓÚapplication.properties¼ÓÔØ£¬
+#bootstrap.properties ä¼šä¼˜å…ˆäºapplication.propertiesåŠ è½½ï¼Œ
 
 
-# ·ÖÖ§
+# åˆ†æ”¯
 spring.cloud.config.label=master
-# cloud server µØÖ·
+# cloud server åœ°å€
 spring.cloud.config.uri=http://localhost:8101
-# ÒªÇëÇóÄÇ¸öÃû³ÆµÄµÄÔ¶³ÌÎÄ¼ş£¬¶à¸öÓÃ¶ººÅ·Ö¸ô. ºÍÏÂÃæµÄprofileÁ¬½Ó£¬¾Í»á·ÃÎÊapplication-dev.properties
+# è¦è¯·æ±‚é‚£ä¸ªåç§°çš„çš„è¿œç¨‹æ–‡ä»¶ï¼Œå¤šä¸ªç”¨é€—å·åˆ†éš”. å’Œä¸‹é¢çš„profileè¿æ¥ï¼Œå°±ä¼šè®¿é—®application-dev.properties
 spring.cloud.config.name=application
 # profile
 spring.cloud.config.profile=dev
 
-# ¿ìËÙÊ§°Ü
+# å¿«é€Ÿå¤±è´¥
 #spring.cloud.config.fail-fast=true
 
-# ¿ªÆôÍ¨¹ı·şÎñÀ´·ÃÎÊconfig server
+# å¼€å¯é€šè¿‡æœåŠ¡æ¥è®¿é—®config server
 spring.cloud.discovery.enabled=true
-# config server ÅäÖÃÖĞĞÄ×¢²áµÄ·şÎñÃû
+# config server é…ç½®ä¸­å¿ƒæ³¨å†Œçš„æœåŠ¡å
 spring.cloud.config.discovery.service-id=CLOUD-CONFIG-SERVER
 
-# ºÍeureka·şÎñÆ÷Í¨Ñ¶µÄURL
+# å’ŒeurekaæœåŠ¡å™¨é€šè®¯çš„URL
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka
