--- a/cloud-config-server/src/main/resources/application.properties
+++ b/cloud-config-server/src/main/resources/application.properties
@@ -6,32 +6,32 @@ spring.cloud.config.server.git.uri=https://ghp_sEhWMQJ2JB6d2yE0ZjTiv9WahuBClj1c2
 spring.cloud.config.server.git.username=ArronSun
 #GitHub token
 spring.cloud.config.server.git.password=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
-# ²Ö¿âÂ·¾¶ÏÂÏà¶ÔËÑË÷Î»ÖÃ£¬¿ÉÒÔÅäÖÃ¶à¸ö
+# ä»“åº“è·¯å¾„ä¸‹ç›¸å¯¹æœç´¢ä½ç½®ï¼Œå¯ä»¥é…ç½®å¤šä¸ª
 spring.cloud.config.server.git.search-paths=config
-# Á¬½Ógit ³¬Ê±Ê±¼ä
+# è¿æ¥git è¶…æ—¶æ—¶é—´
 spring.cloud.config.server.git.timeout=30
 
 
-# actuator ¼à¿Ø
+# actuator ç›‘æ§
 management.endpoints.web.exposure.include=*
 
-#rabbitmq ÅäÖÃ
+#rabbitmq é…ç½®
 spring.rabbitmq.host=localhost
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.port=5672
 
-# Éú²úÕßÊµÀıÃû£¬Í¬Ò»¸öspring.application.name Ãû³ÆÎ¨Ò»
+# ç”Ÿäº§è€…å®ä¾‹åï¼ŒåŒä¸€ä¸ªspring.application.name åç§°å”¯ä¸€
 eureka.instance.instance-id=cloud-config-server
 
 eureka.client.register-with-eureka=true
-# ºÍeureka·şÎñÆ÷Í¨Ñ¶µÄURL
+# å’ŒeurekaæœåŠ¡å™¨é€šè®¯çš„URL
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka
-# ÔÚµØÖ·À¸ÉÏÊ¹ÓÃ IP µØÖ·½øĞĞÏÔÊ¾
+# åœ¨åœ°å€æ ä¸Šä½¿ç”¨ IP åœ°å€è¿›è¡Œæ˜¾ç¤º
 eureka.instance.prefer-ip-address=true
 
-# ÉèÖÃĞÄÌøµÄÊ±¼ä¼ä¸ô£¨Ä¬ÈÏÊÇ30Ãë£©
+# è®¾ç½®å¿ƒè·³çš„æ—¶é—´é—´éš”ï¼ˆé»˜è®¤æ˜¯30ç§’ï¼‰
 eureka.instance.lease-renewal-interval-in-seconds=5
-# eureka server ×îºóÒ»´ÎÊÕµ½ĞÄÌøÊ±µÈ´ıµÄÊ±¼ä£¬³¬Ê±½«»áÒÆ³ıclient£¨Ä¬ÈÏÊÇ90Ãë£©
+# eureka server æœ€åä¸€æ¬¡æ”¶åˆ°å¿ƒè·³æ—¶ç­‰å¾…çš„æ—¶é—´ï¼Œè¶…æ—¶å°†ä¼šç§»é™¤clientï¼ˆé»˜è®¤æ˜¯90ç§’ï¼‰
 eureka.instance.lease-expiration-duration-in-seconds=3
 
