--- a/eureka-consumer/src/main/resources/application.properties
+++ b/eureka-consumer/src/main/resources/application.properties
@@ -2,21 +2,21 @@ server.port=7001
 
 #
 eureka.client.register-with-eureka=true
-# ºÍeureka·şÎñÆ÷Í¨Ñ¶µÄURL
+# å’ŒeurekaæœåŠ¡å™¨é€šè®¯çš„URL
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka
 spring.application.name=CONSUMERS
 eureka.instance.instance-id=consumer
 
-# ÅäÖÃÇëÇóGZIPÑ¹Ëõ
+# é…ç½®è¯·æ±‚GZIPå‹ç¼©
 feign.compression.request.enabled=true
-# ÅäÖÃÏìÓ¦GZIPÑ¹Ëõ
+# é…ç½®å“åº”GZIPå‹ç¼©
 feign.compression.response.enabled=true
-# ÅäÖÃÑ¹ËõÖ§³ÖµÄmime type
+# é…ç½®å‹ç¼©æ”¯æŒçš„mime type
 feign.compression.request.mime-types="text/xml", "application/xml", "application/json"
-# ÅäÖÃÑ¹ËõÊı¾İ´óĞ¡µÄÏÂÏŞ,Ä¬ÈÏ2048
+# é…ç½®å‹ç¼©æ•°æ®å¤§å°çš„ä¸‹é™,é»˜è®¤2048
 feign.compression.request.min-request-size=2048
 
 feign.hystrix.enabled=true
 
-# actuator ¼à¿Ø
+# actuator ç›‘æ§
 management.endpoints.web.exposure.include=*
