--- a/eureka-provider/src/main/resources/application.properties
+++ b/eureka-provider/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 server.port=9001
-# Éú²úÕßÓ¦ÓÃÃû³Æ -
+# ç”Ÿäº§è€…åº”ç”¨åç§° -
 spring.application.name=PROVIDERS
-# Éú²úÕßÊµÀıÃû£¬Í¬Ò»¸öspring.application.name Ãû³ÆÎ¨Ò»
+# ç”Ÿäº§è€…å®ä¾‹åï¼ŒåŒä¸€ä¸ªspring.application.name åç§°å”¯ä¸€
 eureka.instance.instance-id=provider
 
 eureka.client.register-with-eureka=true
-# ºÍeureka·şÎñÆ÷Í¨Ñ¶µÄURL
+# å’ŒeurekaæœåŠ¡å™¨é€šè®¯çš„URL
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka
 
-# ÉèÖÃĞÄÌøµÄÊ±¼ä¼ä¸ô£¨Ä¬ÈÏÊÇ30Ãë£©
+# è®¾ç½®å¿ƒè·³çš„æ—¶é—´é—´éš”ï¼ˆé»˜è®¤æ˜¯30ç§’ï¼‰
 eureka.instance.lease-renewal-interval-in-seconds=5
-# eureka server ×îºóÒ»´ÎÊÕµ½ĞÄÌøÊ±µÈ´ıµÄÊ±¼ä£¬³¬Ê±½«»áÒÆ³ıclient£¨Ä¬ÈÏÊÇ90Ãë£©
+# eureka server æœ€åä¸€æ¬¡æ”¶åˆ°å¿ƒè·³æ—¶ç­‰å¾…çš„æ—¶é—´ï¼Œè¶…æ—¶å°†ä¼šç§»é™¤clientï¼ˆé»˜è®¤æ˜¯90ç§’ï¼‰
 eureka.instance.lease-expiration-duration-in-seconds=3
 
-# actuator ¼à¿Ø
+# actuator ç›‘æ§
 management.endpoints.web.exposure.include=*
