--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 server.port=8001
 
 spring.application.name=eureka-server
-# ÊµÀıÃû³Æ Ãû×Ö¿ÉÒÔ×Ô¼º¶¨
+# å®ä¾‹åç§° åå­—å¯ä»¥è‡ªå·±å®š
 eureka.instance.hostname=localhost
 
-# eureka client ĞÅÏ¢ÊÇ·ñ±»ÆäËûeureka client ·¢ÏÖËüµÄĞÅÏ¢
+# eureka client ä¿¡æ¯æ˜¯å¦è¢«å…¶ä»–eureka client å‘ç°å®ƒçš„ä¿¡æ¯
 eureka.client.register-with-eureka=false
-# ´Ë¿Í»§¶ËÊÇ·ñÓ¦¸Ã´Óeureka server »ñÈ¡eureka×¢²áĞÅÏ¢
+# æ­¤å®¢æˆ·ç«¯æ˜¯å¦åº”è¯¥ä»eureka server è·å–eurekaæ³¨å†Œä¿¡æ¯
 eureka.client.fetch-registry=false
 
-#¹Ø±Õ±£»¤Ä£Ê½
+#å…³é—­ä¿æŠ¤æ¨¡å¼
 eureka.server.enable-self-preservation=false
-#ÉèÖÃÇåÀíµÄ¼ä¸ôÊ±¼ä£¬ºÁÃëµ¥Î»£¨Ä¬ÈÏÊÇ60Ãë£©
+#è®¾ç½®æ¸…ç†çš„é—´éš”æ—¶é—´ï¼Œæ¯«ç§’å•ä½ï¼ˆé»˜è®¤æ˜¯60ç§’ï¼‰
 eureka.server.eviction-interval-timer-in-ms=60000
 
