--- a/hystrix-dashboard-turbine/src/main/resources/application.properties
+++ b/hystrix-dashboard-turbine/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 server.port=11001
 
 spring.application.name=hystrix-turbine
-# ÊµÀıÃû£¬Í¬Ò»¸öspring.application.name Ãû³ÆÎ¨Ò»
+# å®ä¾‹åï¼ŒåŒä¸€ä¸ªspring.application.name åç§°å”¯ä¸€
 eureka.instance.instance-id=hystrix-turbine
 
-# ´Ë¿Í»§¶ËÊÇ·ñÓ¦¸Ã´Óeureka server »ñÈ¡eureka×¢²áĞÅÏ¢
+# æ­¤å®¢æˆ·ç«¯æ˜¯å¦åº”è¯¥ä»eureka server è·å–eurekaæ³¨å†Œä¿¡æ¯
 eureka.client.register-with-eureka=false
 
-# ºÍeureka·şÎñÆ÷Í¨Ñ¶µÄURL
+# å’ŒeurekaæœåŠ¡å™¨é€šè®¯çš„URL
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka
 
-# ¼à¿ØµÄ¼¯Èº
+# ç›‘æ§çš„é›†ç¾¤
 turbine.app-config=PROVIDERS,USER-PROVIDERS
 turbine.cluster-name-expression=new String("default")
