--- a/zuul-gateway/src/main/resources/application.properties
+++ b/zuul-gateway/src/main/resources/application.properties
@@ -2,48 +2,48 @@ server.port=8501
 
 spring.application.name=ZUUL-GATEWAY
 
-# ´Ë¿Í»§¶ËÊÇ·ñÓ¦¸Ã´Óeureka server »ñÈ¡eureka×¢²áĞÅÏ¢
+# æ­¤å®¢æˆ·ç«¯æ˜¯å¦åº”è¯¥ä»eureka server è·å–eurekaæ³¨å†Œä¿¡æ¯
 eureka.client.register-with-eureka=true
 
-# ºÍeureka·şÎñÆ÷Í¨Ñ¶µÄURL
+# å’ŒeurekaæœåŠ¡å™¨é€šè®¯çš„URL
 eureka.client.service-url.defaultZone=http://localhost:8001/eureka
-# ÔÚµØÖ·À¸ÉÏÊ¹ÓÃ IP µØÖ·½øĞĞÏÔÊ¾
+# åœ¨åœ°å€æ ä¸Šä½¿ç”¨ IP åœ°å€è¿›è¡Œæ˜¾ç¤º
 eureka.instance.prefer-ip-address=true
 
-# ÉèÖÃĞÄÌøµÄÊ±¼ä¼ä¸ô£¨Ä¬ÈÏÊÇ30Ãë£©
+# è®¾ç½®å¿ƒè·³çš„æ—¶é—´é—´éš”ï¼ˆé»˜è®¤æ˜¯30ç§’ï¼‰
 eureka.instance.lease-renewal-interval-in-seconds=5
-# eureka server ×îºóÒ»´ÎÊÕµ½ĞÄÌøÊ±µÈ´ıµÄÊ±¼ä£¬³¬Ê±½«»áÒÆ³ıclient£¨Ä¬ÈÏÊÇ90Ãë£©
+# eureka server æœ€åä¸€æ¬¡æ”¶åˆ°å¿ƒè·³æ—¶ç­‰å¾…çš„æ—¶é—´ï¼Œè¶…æ—¶å°†ä¼šç§»é™¤clientï¼ˆé»˜è®¤æ˜¯90ç§’ï¼‰
 eureka.instance.lease-expiration-duration-in-seconds=3
 
-# ×Ô¶¨ÒåÂ·ÓÉ·ÃÎÊ¹æÔò
+# è‡ªå®šä¹‰è·¯ç”±è®¿é—®è§„åˆ™
 #zuul.routes.providers=/providers-proxy/**
 #zuul.routes.user-providers=/user-providers-proxy/**
 
-# providers ÊÇÒ»¸öÂß¼­Ãû³Æ£¬ÊÇÎªÁËºÍserviceId¹ØÁªÆğÀ´µÄ£¬pathÇ°µÄproviders¿ÉÒÔ²»ÊÇ·şÎñÃû£¬Ö»Òªservice-idºÍpathÇ°¶ÔÓ¦¾ÍĞĞ
+# providers æ˜¯ä¸€ä¸ªé€»è¾‘åç§°ï¼Œæ˜¯ä¸ºäº†å’ŒserviceIdå…³è”èµ·æ¥çš„ï¼Œpathå‰çš„providerså¯ä»¥ä¸æ˜¯æœåŠ¡åï¼Œåªè¦service-idå’Œpathå‰å¯¹åº”å°±è¡Œ
 zuul.routes.providers.path=/providers-proxy/**
 zuul.routes.providers.service-id=providers
 
 zuul.routes.user-providers.path=/user-providers-proxy/**
 zuul.routes.user-providers.service-id=user-providers
 
-# ºöÂÔ¼¯ÈºÃû£¬ÆÁ±Î·şÎñÔ­ÓĞµÄ¶ÔÍâ·ÃÎÊµÄÂ·ÓÉÇ°×º£¬±ÈÈçÆÁ±ÎÁËproviders·şÎñ¾Í²»ÄÜÒÔproviders×öÎªÇ°×º·ÃÎÊproviders·şÎñ
+# å¿½ç•¥é›†ç¾¤åï¼Œå±è”½æœåŠ¡åŸæœ‰çš„å¯¹å¤–è®¿é—®çš„è·¯ç”±å‰ç¼€ï¼Œæ¯”å¦‚å±è”½äº†providersæœåŠ¡å°±ä¸èƒ½ä»¥providersåšä¸ºå‰ç¼€è®¿é—®providersæœåŠ¡
 #zuul.ignored-services=providers
-# *ÊÇÆÁ±ÎËùÓĞµÄ·şÎñ£¬·ÀÖ¹·şÎñÇÖÈë
+# *æ˜¯å±è”½æ‰€æœ‰çš„æœåŠ¡ï¼Œé˜²æ­¢æœåŠ¡ä¾µå…¥
 zuul.ignored-services=*
-# ½Ó¿ÚÂ·¾¶ÆÁ±Î
+# æ¥å£è·¯å¾„å±è”½
 zuul.ignored-patterns=/**/hello/**
 
-# ÉèÖÃ¹«¹²Ç°×º
+# è®¾ç½®å…¬å…±å‰ç¼€
 zuul.prefix=/zuul-proxy
 
 
 
-#µ¥ÊµÀıÓ³Éä,²»Òªservice-id£¬Ê¹ÓÃurlÌîĞ´ÎïÀíÂ·ÓÉ
+#å•å®ä¾‹æ˜ å°„,ä¸è¦service-idï¼Œä½¿ç”¨urlå¡«å†™ç‰©ç†è·¯ç”±
 #zuul.routes.providers.path=/providers-proxy/**
 #zuul.routes.providers.url=http://localhost:9001
 
-# ¿ªÆôÖØÊÔ
+# å¼€å¯é‡è¯•
 #zuul.retryable=true
 
-# ¼¢¶ö¼ÓÔØ
+# é¥¥é¥¿åŠ è½½
 zuul.ribbon.eager-load.enabled=true
