--- a/cloud-config-client/src/main/resources/application.properties
+++ b/cloud-config-client/src/main/resources/application.properties
@@ -2,11 +2,11 @@ server.port=8201
 
 spring.application.name=cloud-config-client
 
-# actuator ¼à¿Ø
+# actuator ç›‘æ§
 management.endpoints.web.exposure.include=*
 #management.endpoint.health.show-details=always
 
-#rabbitmq ÅäÖÃ
+#rabbitmq é…ç½®
 spring.rabbitmq.host=localhost
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
