cloud Stream consumer

--- a/cloud-stream-provider/src/main/resources/application.properties
+++ b/cloud-stream-provider/src/main/resources/application.properties
@@ -3,20 +3,22 @@ server.port=8301
 spring.application.name=cloud-stream-provider
 
 #消息组件类型 rabbitmq1为自定义的rabbitmq实例名称，如果有多个消息队列实例的话可以参照下面这样
+# type：消息中间件类型
 spring.cloud.stream.binders.rabbitmq1.type=rabbit
 spring.cloud.stream.binders.rabbitmq1.environment.spring.rabbitmq.host=localhost
 spring.cloud.stream.binders.rabbitmq1.environment.spring.rabbitmq.username=guest
 spring.cloud.stream.binders.rabbitmq1.environment.spring.rabbitmq.password=guest
 spring.cloud.stream.binders.rabbitmq1.environment.spring.rabbitmq.port=5672
+spring.cloud.stream.binders.rabbitmq1.environment.spring.rabbitmq.virtual-host=/
 
 # 实例2
-spring.cloud.stream.binders.rabbitmq2.type=rabbit
-spring.cloud.stream.binders.rabbitmq2.environment.spring.rabbitmq.host=localhost
-spring.cloud.stream.binders.rabbitmq2.environment.spring.rabbitmq.username=guest
-spring.cloud.stream.binders.rabbitmq2.environment.spring.rabbitmq.password=guest
-spring.cloud.stream.binders.rabbitmq2.environment.spring.rabbitmq.port=5672
+#spring.cloud.stream.binders.rabbitmq2.type=rabbit
+#spring.cloud.stream.binders.rabbitmq2.environment.spring.rabbitmq.host=localhost
+#spring.cloud.stream.binders.rabbitmq2.environment.spring.rabbitmq.username=guest
+#spring.cloud.stream.binders.rabbitmq2.environment.spring.rabbitmq.password=guest
+#spring.cloud.stream.binders.rabbitmq2.environment.spring.rabbitmq.port=5672
 
-# 要使用的 Exchange 名称
+# 要使用的 Exchange 名称 ，output是rabbitmq的channel名称，后面可以自定义
 spring.cloud.stream.bindings.output.destination=streamExchange
 #设置消息类型
 spring.cloud.stream.bindings.output.content-type=application/json
@@ -24,10 +26,3 @@ spring.cloud.stream.bindings.output.content-type=application/json
 spring.cloud.stream.bindings.output.binder=rabbitmq1
 
 
-
-#rabbitmq 配置
-#spring.rabbitmq.host=localhost
-#spring.rabbitmq.username=guest
-#spring.rabbitmq.password=guest
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.virtual-host=/
