--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>cloud-config-server</module>
         <module>cloud-config-client</module>
         <module>cloud-stream-provider</module>
+        <module>stream-consumer</module>
     </modules>
 
     <dependencyManagement>
