--- a/cloud-stream-provider/src/main/resources/application.properties
+++ b/cloud-stream-provider/src/main/resources/application.properties
@@ -19,10 +19,11 @@ spring.cloud.stream.binders.rabbitmq1.environment.spring.rabbitmq.virtual-host=/
 #spring.cloud.stream.binders.rabbitmq2.environment.spring.rabbitmq.port=5672
 
 # 要使用的 Exchange 名称 ，output是rabbitmq的channel名称，后面可以自定义
-spring.cloud.stream.bindings.output.destination=streamExchange
+spring.cloud.stream.bindings.stream_output.destination=streamExchange
 #设置消息类型
-spring.cloud.stream.bindings.output.content-type=application/json
+spring.cloud.stream.bindings.stream_output.content-type=application/json
 #要绑定的消息服务的实例名
-spring.cloud.stream.bindings.output.binder=rabbitmq1
+spring.cloud.stream.bindings.stream_output.binder=rabbitmq1
 
-
+#绑定routing-key
+spring.cloud.stream.rabbit.bindings.stream_output.producer.routing-key-expression='routing_key_a'
