--- a/stream-consumer/src/main/resources/application.properties
+++ b/stream-consumer/src/main/resources/application.properties
@@ -11,8 +11,12 @@ spring.cloud.stream.binders.rabbitmq1.environment.spring.rabbitmq.password=guest
 spring.cloud.stream.binders.rabbitmq1.environment.spring.rabbitmq.port=5672
 
 # 要使用的 Exchange 名称 ，input是rabbitmq的channel名称，后面可以自定义
-spring.cloud.stream.bindings.input.destination=streamExchange
+spring.cloud.stream.bindings.stream_input.destination=streamExchange
 #设置消息类型
-spring.cloud.stream.bindings.input.content-type=application/json
+spring.cloud.stream.bindings.stream_input.content-type=application/json
 #要绑定的消息服务的实例名
-spring.cloud.stream.bindings.input.binder=rabbitmq1
+spring.cloud.stream.bindings.stream_input.binder=rabbitmq1
+# 分组
+spring.cloud.stream.bindings.stream_input.group=consumer_group_a
+#绑定routing-key
+spring.cloud.stream.rabbit.bindings.stream_input.consumer.binding-routing-key=routing_key_a
