--- a/cloud-stream-consumer/pom.xml
+++ b/cloud-stream-consumer/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <artifactId>stream-consumer</artifactId>
+    <artifactId>cloud-stream-consumer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>stream-consumer</name>
-    <description>stream-consumer</description>
+    <description>cloud-stream-consumer</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
