--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -12,7 +14,7 @@
     <groupId>site.sunlong</groupId>
     <artifactId>base</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>pom</packaging>
+
     <name>micro-services-practice</name>
     <description>micro-services-practice</description>
     <properties>
@@ -35,6 +37,7 @@
         <module>cloud-config-client</module>
         <module>cloud-stream-provider</module>
         <module>cloud-stream-consumer</module>
+        <module>cloud-sleuth</module>
     </modules>
 
     <dependencyManagement>
@@ -55,64 +58,64 @@
             </dependency>
 
 
-            <dependency>
+            <!--<dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
                 <scope>test</scope>
-            </dependency>
+            </dependency>-->
 
             <dependency>
                 <groupId>site.sunlong</groupId>
                 <artifactId>eureka-server</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>site.sunlong</groupId>
                 <artifactId>eureka-provider</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>site.sunlong</groupId>
                 <artifactId>eureka-consumer</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>site.sunlong</groupId>
                 <artifactId>hystrix-dashboard</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>site.sunlong</groupId>
                 <artifactId>ribbon</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>site.sunlong</groupId>
                 <artifactId>user-provider</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>site.sunlong</groupId>
                 <artifactId>hystrix-dashboard-turbine</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>site.sunlong</groupId>
                 <artifactId>cloud-config-server</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>site.sunlong</groupId>
                 <artifactId>cloud-config-client</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>site.sunlong</groupId>
                 <artifactId>cloud-stream-provider</artifactId>
-                <version>${version}</version>
+                <version>${project.version}</version>
             </dependency>
         </dependencies>
 
